# wtf

./: README.md  pyproject.toml
src/: __init__.py  audio_engine.py  config.py  crag.py  evaluation.py  frame_encoder.py  main.py  ocr_engine.py  pipeline.py  pipeline_old.py  reranker.py  temporal_align.py  utils.py  verifier.py  video_encoder.py
src/offline/: asr_engine.py  indexer.py
src/online/: __init__.py  auto_track.py  query_analyzer.py  retriever.py  semi_track.py
src/web/: __init__.py  app.py
